# Snack-Bar-System

./: README.md
snack-bar-system/: alembic.ini  pyproject.toml
snack-bar-system/migrations/: env.py
snack-bar-system/migrations/versions/: 2f26f2aca5e9_configurando6.py  983844df6877_configurando5.py  9d399909478f_configurando3.py  a17d8de118f1_configurando2.py  ba02b29b1623_configurando4.py  ccd12324b4ef_configurando1.py  ce978df764e7_configurando7.py
snack-bar-system/routers/: cliente.py  comanda.py  combo.py  produto.py
snack-bar-system/snack_bar_system/: app.py  database.py  models.py  schemas.py  security.py  settings.py
snack-bar-system/tests/: conftest.py
